# godot_rl_agents

./: .deepsource.toml  .gitignore  .gitmodules  .travis.yml  LICENSE  MAINFEST.in  Makefile  README.md  environment.yml  ppo_test.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  zeb_try_sample_factory.py
.ghold/workflows/: tests.yml
.github/workflows/: quality.yml  test-ci.yml  tests.yml
GodotRLAgents/: project.godot
GodotRLAgents/.mono/metadata/: ide_messaging_meta.txt
GodotRLAgents/addons/godot_rl_agents/: RaycastSensor3D.gd  RaycastSensor3D.tscn  godot_rl_agents.gd  icon.png.import  sync.gd
docs/: ADV_CLEAN_RL.md  ADV_RLLIB.md  ADV_SAMPLE_FACTORY.md  ADV_STABLE_BASELINES_3.md  CUSTOM_ENV.md  EXAMPLE_ENVIRONMENTS.md  GENERAL_TIPS.md  IMITATION_LEARNING.md  INSTALLATION.md  NODE_REFERENCE.md  ROADMAP.md  TRAINING_MULTIPLE_POLICIES.md  TRAINING_STATISTICS.md  TROUBLESHOOTING.md  WORKING_WITH_CSHARP.md
envs/BallChase/: BallChase.gd  BallChase.sln  BallChase.tscn  BatchEnvs.tscn  Camera2D.gd  Player.gd  Raycast.gd  Sync.cs  Sync.gd  export_presets.cfg  project.godot
envs/Jumper/: BatchEnvs.tscn  Jumper.tscn  Player.gd  export_presets.cfg  project.godot
envs/RisingRocket/: project.godot
envs/builds/BallChase/: ball_chase.pck  ball_chase.sh  ball_chase_opt.pck
envs/builds/BulletHell/: bullet_hell.pck
envs/builds/FlyBy/: fly_by.pck
envs/builds/JumperHard/: jumper_hard.pck  jumper_hard.sh
envs/builds/VirtualCamera/: virtual_camera.pck
envs/builds/test_env_identity/: TestEnvIdentity.pck
envs/checkpoints/ball_chase/: events.out.tfevents.1648127586.AORUS  params.json  params.pkl  progress.csv
envs/checkpoints/fly_by/: events.out.tfevents.1648132295.AORUS  params.json  params.pkl  progress.csv
envs/checkpoints/jumper_hard/: events.out.tfevents.1648128313.AORUS  params.json  params.pkl
envs/checkpoints/space_shooter/: params.json  params.pkl
envs/configs/: ppo_config_fly_by.yaml  ppo_config_jumper_hard.yaml  ppo_config_space_shooter.yaml
envs/example_envs/BallChase/: BallChase.tscn  BatchEnvs.tscn  Camera2D.gd  Player.gd  cherry.png.import  export_presets.cfg  icon.png.import  light_mask.png.import  lollipopGreen.png.import  project.godot
envs/train_configs/: ppo_config_space_shooter.yaml
examples/: clean_rl_example.py  clean_rl_pqn_example.py  rllib_config.yaml  rllib_example.py  sample_factory_example.py  sb3_imitation.py  stable_baselines3_example.py  stable_baselines3_export_onnx.py  stable_baselines3_hp_tuning.py
godot_rl/: main.py
godot_rl/core/: godot_env.py  utils.py
godot_rl/custom_models/: attention_model.py
godot_rl/download_utils/: download_examples.py  download_godot_editor.py  from_hub.py
godot_rl/wrappers/: clean_rl_wrapper.py  petting_zoo_wrapper.py  ray_wrapper.py  sample_factory_wrapper.py  sbg_single_obs_wrapper.py  stable_baselines_wrapper.py  stable_baselines_wrapper_single_obs_space.py
godot_rl_agents/: godot_env.py  main.py
godot_rl_agents/core/: godot_env.py  godot_parallel_env.py  main.py  main_trainer.py  utils.py
godot_rl_agents/custom_models/: attention_model.py
godot_rl_agents/download_utils/: download_godot_editor.py
godot_rl_agents/tests/: test_ray_wrapper.py  test_stable_baselines_wrapper.py  zeb_camera_decoding.py  zeb_test_godot_env.py  zeb_test_ray_wrapper.py  zeb_test_variable_length_obs.py
godot_rl_agents/wrappers/: ray_wrapper.py  ray_wrappers.py  sample_factory_wrapper.py  stable_baselines_wrapper.py
plugin/: GodotRLAgents.tscn  project.godot
plugin/.import/: icon.png-45a871b53434e556222f5901d598ab34.stex
scripts/: get_all_examples_from_hub.bat  get_all_examples_from_hub.sh
tests/: benchmark_env.py  test_action_space_preprocessor.py  test_action_space_proprocessor.py  test_call_method.py  test_godot_env.py  test_identity_env_ray_wrapper.py  test_rllib.py  test_sample_factory.py  test_sample_factory_training.py  test_sb3_onnx_export.py  test_sb3_training.py
tests/fixtures/: test_rllib.yaml
train_dir/sf_train_godot/: cfg.json  git.diff  sf_log.txt
(+287 files in other folders)
