[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "godot_rl"
version = "0.8.1"
authors = [
  { name="Edward Beeching", email="edbeeching@gmail.com" },
]
dynamic = ["license", "scripts", "dependencies", "optional-dependencies"]
description = "A Deep Reinforcement Learning package for the Godot game engine"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/pypa/godot_rl_agents"
"Bug Tracker" = "https://github.com/pypa/godot_rl_agents/issues"