[metadata]
name = godot_rl_agents
description = A Deep Reinforcement Learning package for the Godot game engine
author = Edward Beeching
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    
[options]
packages = find:
install_requires =
    requests>=2
python_requires = >=3.8
zip_safe = no

[options.entry_points]
console_scripts =
    gdrl = godot_rl_agents.core.main:main

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
