[metadata]
name = godot_rl
description = A Deep Reinforcement Learning package for the Godot game engine
author = Edward Beeching
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    
[options]
packages = find:
install_requires =
    numpy
    tensorboard
    wget
    huggingface_hub>=0.10
    gym==0.26.2
    stable-baselines3
    huggingface_sb3

python_requires = >=3.8
zip_safe = no

[options.entry_points]
console_scripts =
    gdrl = godot_rl.main:main
    gdrl.interactive = godot_rl.core.godot_env:interactive
    gdrl.download_editor = godot_rl.download_utils.download_godot_editor:download_editor
    gdrl.env_from_hub = godot_rl.download_utils.from_hub:main

[options.extras_require]
test =
    pytest>=6.0
    pytest-xdist

dev = 
    pytest>=6.0
    pytest-xdist
    black[jupyter]~=22.0
    flake8>=3.8.3
    isort>=5.0.0
    pyyaml>=5.3.1

sb3 =
    gym==0.26.2
    stable-baselines3
    huggingface_sb3

sf =
    sample-factory
    gym==0.26.2

rllib = 
    numpy==1.23.5
    ray==2.2.0
    ray[rllib]
    tensorflow_probability

clean-rl = 
    wandb

all =     
    numpy==1.23.5
    gym==0.26.2
    stable-baselines3
    huggingface_sb3
    sample-factory
    
    ray==2.2.0
    ray[rllib]
    tensorflow_probability