[metadata]
name = godot_rl
description = A Deep Reinforcement Learning package for the Godot game engine
author = Edward Beeching
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    
[options]
packages = find:
install_requires =
    numpy
    tensorboard
    wget
    huggingface_hub>=0.10
    gymnasium
    stable-baselines3>=2.0.0
    huggingface_sb3
    onnx
    onnxruntime

python_requires = >=3.8
zip_safe = no

[options.entry_points]
console_scripts =
    gdrl = godot_rl.main:main
    gdrl.interactive = godot_rl.core.godot_env:interactive
    gdrl.download_editor = godot_rl.download_utils.download_godot_editor:download_editor
    gdrl.env_from_hub = godot_rl.download_utils.from_hub:main

[options.extras_require]
test =
    pytest>=6.0
    pytest-xdist
dev = 
    pytest>=6.0
    pytest-xdist
    black
    flake8
    isort
    pyyaml>=5.3.1

sf =
    sample-factory

rllib = 
    ray[rllib]

cleanrl = 
    wandb

[flake8]
ignore = E203, E501, E741, W503, W605
